--- a/src/banner/_banner.less
+++ b/src/banner/_banner.less
@@ -7,6 +7,7 @@
   overflow: hidden;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
 }
+
 .da-slider-frame {
   width: 100%;
   height: 100%;
@@ -46,6 +47,12 @@
   left: 110%;
 }
 
+@media (max-width: 768px) {
+  .da-slide .da-img img {
+    display: none;
+  }
+}
+
 .da-slide h2,
 .da-slide p {
   background: rgba(0, 0, 0, 0.6);
@@ -80,7 +87,7 @@
   width: 45%;
   top: 175px;
   color: #fff;
-  font-size: 18px;
+  font-size: 24px;
   line-height: 26px;
   height: 80px;
   overflow: hidden;
@@ -93,10 +100,13 @@
 .da-slide .da-img {
   text-align: center;
   width: 30%;
-  top: 70px;
-  height: 256px;
+  top: 40px;
+  height: 320px;
   line-height: 320px;
   left: 110%; /*60%*/
+  img {
+    height: 100%;
+  }
 }
 
 .da-slide .da-link {
