--- a/src/banner/_banner.less
+++ b/src/banner/_banner.less
@@ -12,7 +12,7 @@
   width: 100%;
   height: 100%;
   position: relative;
-  background: transparent url(images/main-banner.png) repeat 0% 0%;
+  background: transparent url(images/main-banner.jpg) repeat 0% 0%;
   transition: background-position 1s ease-out 0.3s;
 }
 
