Added media for font on Banner

--- a/src/banner/_banner.less
+++ b/src/banner/_banner.less
@@ -88,13 +88,16 @@
   top: 175px;
   color: #fff;
   font-size: 24px;
-  line-height: 26px;
-  height: 80px;
+  line-height: 30px;
   overflow: hidden;
   font-style: italic;
   font-family: 'Economica', Arial, sans-serif;
   font-weight: 400;
   font-style: italic;
+  @media (max-width: 1200px) {
+    font-size: 18px;
+    line-height: 24px;
+  }
 }
 
 .da-slide .da-img {
