--- a/src/banner/_banner.less
+++ b/src/banner/_banner.less
@@ -113,7 +113,7 @@
 }
 
 .da-slide .da-link {
-  top: 290px; /*depends on p height*/
+  bottom: 30px; /*depends on p height*/
   border-radius: 30px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
   color: #fff;
