--- a/src/banner/_banner.less
+++ b/src/banner/_banner.less
@@ -1,8 +1,10 @@
 .da-slider {
   width: 100%;
-  min-width: 520px;
   height: 450px;
-  position: relative;
+  @media (max-width: 768px) {
+    height: 300px;
+  }
+    position: relative;
   overflow: hidden;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
 }
@@ -73,7 +75,10 @@
 .da-slide h2 {
   color: #fff;
   font-size: 66px;
-  width: 50%;
+  @media (max-width: 768px) {
+    font-size: 30px;
+    top: 15px;
+  }
   top: 60px;
   white-space: nowrap;
   z-index: 10;
@@ -85,6 +90,7 @@
 .da-slide p {
   width: 45%;
   top: 175px;
+
   color: #fff;
   font-size: 24px;
   line-height: 30px;
@@ -96,6 +102,10 @@
   @media (max-width: 1200px) {
     font-size: 18px;
     line-height: 24px;
+  }
+  @media (max-width: 768px) {
+    top: 100px;
+    width: 80%;
   }
 }
 
@@ -138,30 +148,31 @@
   z-index: 2000;
   -moz-user-select: none;
   -webkit-user-select: none;
-}
+  span {
+    display: inline-block;
+    position: relative;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: #333333;
+    margin: 3px;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1) inset, 1px 1px 1px rgba(255, 255, 255, 0.6);
+  }
 
-.da-dots span {
-  display: inline-block;
-  position: relative;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background: #333333;
-  margin: 3px;
-  cursor: pointer;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1) inset, 1px 1px 1px rgba(255, 255, 255, 0.6);
-}
-
-.da-dots span.da-dots-current:after {
-  content: '';
-  width: 8px;
-  height: 8px;
-  position: absolute;
-  top: 2px;
-  left: 2px;
-  border-radius: 50%;
-  background: rgb(255, 255, 255);
-  background: linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 1) 47%, rgba(237, 237, 237, 1) 100%);
+  span.da-dots-current {
+    &:after {
+      content: '';
+      width: 8px;
+      height: 8px;
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      border-radius: 50%;
+      background: rgb(255, 255, 255);
+      background: linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(246, 246, 246, 1) 47%, rgba(237, 237, 237, 1) 100%);
+    }
+  }
 }
 
 .da-arrows {
