--- a/src/banner/_banner.less
+++ b/src/banner/_banner.less
@@ -4,7 +4,7 @@
   @media (max-width: 768px) {
     height: 300px;
   }
-    position: relative;
+  position: relative;
   overflow: hidden;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
 }
@@ -123,16 +123,24 @@
 
 .da-slide .da-link {
   bottom: 30px; /*depends on p height*/
-  border-radius: 30px;
+  border-radius: 15px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
   color: #fff;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
   border: 8px solid rgba(255, 255, 255, 0.8);
   padding: 2px 20px 0px;
   font-size: 18px;
+
   line-height: 30px;
   text-align: center;
   background: rgba(255, 255, 255, 0.2);
+  @media (max-width: 768px) {
+    font-size: 12px;
+    border: 3px solid rgba(255, 255, 255, 0.8);
+    border-radius: 8px;
+    line-height: 20px;
+    padding: 2px 10px 0;
+  }
 }
 
 .da-slide .da-link:hover {
