Fixed slider css for responsiveness

--- a/src/banner/_banner.less
+++ b/src/banner/_banner.less
@@ -140,6 +140,8 @@
     border-radius: 8px;
     line-height: 20px;
     padding: 2px 10px 0;
+    bottom: 15px; /*depends on p height*/
+
   }
 }
 
